Implement about menu item

--- a/scss/global/globalStyles.scss
+++ b/scss/global/globalStyles.scss
@@ -55,6 +55,14 @@
 	transition: all 350;
 }
 
+.border-theme-color {
+	border:	2px solid var(--acid-color); 
+}
+
+.border-theme-color--important {
+	border:	2px solid var(--acid-color) !important; 
+}
+
 //cursor
 
 .c-pointer {
@@ -351,4 +359,8 @@
 
 .transition-all-550 {
 	transition: all 550ms;
+}
+
+.transition-all-650 {
+	transition: all 650ms;
 }
