--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,8 +41,9 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 @import 'lists'; 
 @import './components/croxoGallery.scss'; 
 @import './menus/topNav.scss'; 
-@import './post_types/customPostType.scss'; 
-@import './shop/storeFront.scss'; 
+// @import './post_types/customPostType.scss'; 
+// @import './shop/storeFront.scss'; 
+
 
 @font-face {
     font-family: Lithops;
