--- a/scss/_lists.scss
+++ b/scss/_lists.scss
@@ -62,6 +62,166 @@
         flex-direction: column;
         justify-content: flex-end;
         left: 0;
+        overflow: hidden;
+        position: absolute;
+        right: 0;
+        top: 0;
+
+        &:hover {
+
+          >* {
+            opacity: 1;
+            transform: translate(0, 0px);
+          }
+
+          .disco_title__text-container {
+            >* {
+              background-color: white;
+            }
+          }
+        }
+
+        >* {
+          opacity: 0;
+          transform: translate(0, 20px);
+          transition: all 500ms;
+        }
+
+        a {
+          color: var(--acid-color);
+        }
+
+        .disco_title__paragraph {
+          background-color: white;
+          display: block;
+          margin: 0;
+        }
+
+
+        .disco_title__text-container {
+          &.seemore-hovering {
+            .disco_title__excerpt {
+              height: 100%;
+              padding-top: 10px;
+            }
+          }
+
+          >* {
+            transition: all 500ms;
+
+            &:last-child {
+              padding-bottom: 8px;
+            }
+          }
+
+          .disco_title__excerpt {
+            font-family: "Terminal Grotesque";
+            font-size: 12px;
+            height: 0%;
+            overflow: hidden;
+            line-height: 12px;
+            padding-top: 0;
+            transition: all 500ms, height 1100ms;
+          }
+
+          .disco_title__actions-container__post-link {
+            .disco_title__actions-container__post-link__icon {
+              font-size: 14px;
+
+              &:hover {
+                text-decoration: none !important;
+              }
+            }
+
+            .disco_title__actions-container__post-link__span {
+              font-size: 14px;
+            }
+          }
+
+          .disco_title__actions-container__apply-link {
+            .disco_title__actions-container__apply-link__icon {
+              font-size: 14px;
+
+              &:hover {
+                text-decoration: none !important;
+              }
+            }
+
+            .disco_title__actions-container__apply-link__span {
+              font-size: 14px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.croxo--events-list--main-wrapper {
+  margin-top: 24px;
+
+  .croxo--events-list__list {
+    column-gap: 36px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    row-gap: 36px;
+
+    .croxo--events-list__list__list-item {
+      border: 2px solid transparent;
+      flex-basis: calc(25% - ((3 * 36px)/4));
+      flex-grow: 0;
+      list-style-type: none;
+      position: relative;
+
+      &:hover {
+        border: 2px solid var(--acid-color);
+      }
+
+      &:nth-child(odd) {
+        .disco_title {
+
+          .disco_title__paragraph {}
+        }
+      }
+
+      &:nth-child(even) {
+        .disco_title {
+          .disco_title__paragraph {}
+        }
+      }
+
+      &::marker {
+        display: none;
+      }
+
+      .croxo--events-list__list__list-item__thumb-wrapper {
+        aspect-ratio: 1 / 1;
+        display: flex;
+
+        a {
+          align-self: stretch;
+          display: block;
+          flex: 1;
+
+          img {
+            height: 100%;
+            object-fit: cover;
+            width: 100%;
+
+            filter: grayscale(100%);
+            -webkit-filter: grayscale(100%);
+          }
+        }
+      }
+
+      .disco_title {
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        left: 0;
+        overflow: hidden;
         position: absolute;
         right: 0;
         top: 0;
@@ -97,13 +257,16 @@
 
 
         .disco_title__text-container {
-          &:hover {
+          &.seemore-hovering {
             .disco_title__excerpt {
-              height: 100%; 
+              height: 100%;
+              padding-top: 10px;
             }
           }
 
           >* {
+            transition: all 500ms;
+
             &:last-child {
               padding-bottom: 8px;
             }
@@ -114,27 +277,36 @@
             font-size: 12px;
             height: 0%;
             overflow: hidden;
-            line-height: 12px; 
-            transition: all 500ms ;
+            line-height: 12px;
+            padding-top: 0;
+            transition: all 500ms, height 1100ms;
           }
 
           .disco_title__actions-container__post-link {
             .disco_title__actions-container__post-link__icon {
-              font-size: 12px;
+              font-size: 14px;
+
+              &:hover {
+                text-decoration: none !important;
+              }
             }
 
             .disco_title__actions-container__post-link__span {
-              font-size: 12px;
+              font-size: 14px;
             }
           }
 
           .disco_title__actions-container__apply-link {
             .disco_title__actions-container__apply-link__icon {
-              font-size: 12px;
+              font-size: 14px;
+
+              &:hover {
+                text-decoration: none !important;
+              }
             }
 
             .disco_title__actions-container__apply-link__span {
-              font-size: 12px;
+              font-size: 14px;
             }
           }
         }
