--- a/scss/global/globalStyles.scss
+++ b/scss/global/globalStyles.scss
@@ -6,15 +6,17 @@
 
 .croxo-background-transparent--deep {
 	background-color: transparent;
-		* {
-			background-color: transparent;
+
+	* {
+		background-color: transparent;
 	}
 }
 
 .croxo-background-transparent--deep--imporant {
 	background-color: transparent !important;
-		* {
-			background-color: transparent !important;
+
+	* {
+		background-color: transparent !important;
 	}
 }
 
@@ -24,12 +26,17 @@
 	color: #212529;
 }
 
+.croxo-color-white {
+	color: white;
+}
+
 .croxo-color-transparent {
 	color: transparent;
 }
 
 .croxo-color-transparent--deep {
 	color: transparent;
+
 	* {
 		color: transparent;
 	}
@@ -37,6 +44,7 @@
 
 .croxo-color-transparent--deep--important {
 	color: transparent !important;
+
 	* {
 		color: transparent !important;
 	}
@@ -55,13 +63,29 @@
 	transition: all 350;
 }
 
+.theme-color--deep {
+	color: var(--acid-color);
+	transition: all 350;
+
+	* {
+		color: var(--acid-color);
+		transition: all 350;
+	}
+}
+
+.background-theme-color {
+	background-color: var(--acid-color);
+}
+
 .border-theme-color {
-	border:	2px solid var(--acid-color); 
+	border: 2px solid var(--acid-color);
 }
 
 .border-theme-color--important {
-	border:	2px solid var(--acid-color) !important; 
+	border: 2px solid var(--acid-color) !important;
 }
+
+
 
 //cursor
 
@@ -246,6 +270,14 @@
 		'opsz' 24
 }
 
+.material-symbols-filled {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
 //pointer events
 .p-events-none {
 	pointer-events: none;
@@ -359,6 +391,18 @@
 	margin-bottom: -2px;
 }
 
+.tilt-b-3 {
+	margin-bottom: -3px;
+}
+
+.tilt-b-4 {
+	margin-bottom: -4px;
+}
+
+.tilt-b-5 {
+	margin-bottom: -5px;
+}
+
 .tilt-l-2 {
 	margin-left: -2px;
 }
@@ -379,6 +423,16 @@
 	&:hover {
 		margin-right: -18px;
 	}
+}
+
+//transform
+
+.transform-origin-center {
+	transform-origin: center;
+}
+
+.transform-rotate-180 {
+	transform: rotate(180deg);
 }
 
 //transition
