--- a/style.css
+++ b/style.css
@@ -29325,6 +29325,10 @@ progress {
   color: #212529;
 }
 
+.croxo-color-white {
+  color: white;
+}
+
 .croxo-color-transparent {
   color: transparent;
 }
@@ -29353,6 +29357,19 @@ progress {
 .theme-color {
   color: var(--acid-color);
   transition: all 350;
+}
+
+.theme-color--deep {
+  color: var(--acid-color);
+  transition: all 350;
+}
+.theme-color--deep * {
+  color: var(--acid-color);
+  transition: all 350;
+}
+
+.background-theme-color {
+  background-color: var(--acid-color);
 }
 
 .border-theme-color {
@@ -29520,6 +29537,10 @@ progress {
   font-variation-settings: "FILL" 0, "wght" 700, "GRAD" 200, "opsz" 24;
 }
 
+.material-symbols-filled {
+  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
 .p-events-none {
   pointer-events: none;
 }
@@ -29618,6 +29639,18 @@ progress {
   margin-bottom: -2px;
 }
 
+.tilt-b-3 {
+  margin-bottom: -3px;
+}
+
+.tilt-b-4 {
+  margin-bottom: -4px;
+}
+
+.tilt-b-5 {
+  margin-bottom: -5px;
+}
+
 .tilt-l-2 {
   margin-left: -2px;
 }
@@ -29637,6 +29670,14 @@ progress {
   margin-right: -18px;
 }
 
+.transform-origin-center {
+  transform-origin: center;
+}
+
+.transform-rotate-180 {
+  transform: rotate(180deg);
+}
+
 .transition-all-550 {
   transition: all 550ms;
 }
@@ -29654,6 +29695,14 @@ progress {
 }
 .site-header .site-title a:hover {
   text-decoration: none;
+}
+
+.croxo-galinheiro--main-wrapper .croxo-galinheiro--main-wrapper__events-list .croxo-galinheiro--main-wrapper__events-list__future .croxo-galinheiro--main-wrapper__events-list__future__title-container h5:hover .material-symbols-outlined, .croxo-galinheiro--main-wrapper .croxo-galinheiro--main-wrapper__events-list .croxo-galinheiro--main-wrapper__events-list__future .croxo-galinheiro--main-wrapper__events-list__future__title-container .h5:hover .material-symbols-outlined {
+  transform: translate(0, 4px);
+}
+.croxo-galinheiro--main-wrapper .croxo-galinheiro--main-wrapper__events-list .croxo-galinheiro--main-wrapper__events-list__future .croxo-galinheiro--main-wrapper__events-list__future__title-container h5 .material-symbols-outlined, .croxo-galinheiro--main-wrapper .croxo-galinheiro--main-wrapper__events-list .croxo-galinheiro--main-wrapper__events-list__future .croxo-galinheiro--main-wrapper__events-list__future__title-container .h5 .material-symbols-outlined {
+  font-size: 15px;
+  transition: all 550ms ease-in-out;
 }
 
 .discos-grelha {
@@ -29701,6 +29750,7 @@ progress {
   flex-direction: column;
   justify-content: flex-end;
   left: 0;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: 0;
@@ -29721,11 +29771,16 @@ progress {
   color: var(--acid-color);
 }
 .discos-grelha .discos .disco .disco_title .disco_title__paragraph {
+  background-color: white;
   display: block;
   margin: 0;
 }
-.discos-grelha .discos .disco .disco_title .disco_title__text-container:hover .disco_title__excerpt {
+.discos-grelha .discos .disco .disco_title .disco_title__text-container.seemore-hovering .disco_title__excerpt {
   height: 100%;
+  padding-top: 10px;
+}
+.discos-grelha .discos .disco .disco_title .disco_title__text-container > * {
+  transition: all 500ms;
 }
 .discos-grelha .discos .disco .disco_title .disco_title__text-container > *:last-child {
   padding-bottom: 8px;
@@ -29736,19 +29791,133 @@ progress {
   height: 0%;
   overflow: hidden;
   line-height: 12px;
-  transition: all 500ms;
+  padding-top: 0;
+  transition: all 500ms, height 1100ms;
 }
 .discos-grelha .discos .disco .disco_title .disco_title__text-container .disco_title__actions-container__post-link .disco_title__actions-container__post-link__icon {
-  font-size: 12px;
+  font-size: 14px;
+}
+.discos-grelha .discos .disco .disco_title .disco_title__text-container .disco_title__actions-container__post-link .disco_title__actions-container__post-link__icon:hover {
+  text-decoration: none !important;
 }
 .discos-grelha .discos .disco .disco_title .disco_title__text-container .disco_title__actions-container__post-link .disco_title__actions-container__post-link__span {
-  font-size: 12px;
+  font-size: 14px;
 }
 .discos-grelha .discos .disco .disco_title .disco_title__text-container .disco_title__actions-container__apply-link .disco_title__actions-container__apply-link__icon {
-  font-size: 12px;
+  font-size: 14px;
+}
+.discos-grelha .discos .disco .disco_title .disco_title__text-container .disco_title__actions-container__apply-link .disco_title__actions-container__apply-link__icon:hover {
+  text-decoration: none !important;
 }
 .discos-grelha .discos .disco .disco_title .disco_title__text-container .disco_title__actions-container__apply-link .disco_title__actions-container__apply-link__span {
+  font-size: 14px;
+}
+
+.croxo--events-list--main-wrapper {
+  margin-top: 24px;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list {
+  column-gap: 36px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  row-gap: 36px;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item {
+  border: 2px solid transparent;
+  flex-basis: calc(25% - 27px);
+  flex-grow: 0;
+  list-style-type: none;
+  position: relative;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item:hover {
+  border: 2px solid var(--acid-color);
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item::marker {
+  display: none;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .croxo--events-list__list__list-item__thumb-wrapper {
+  aspect-ratio: 1/1;
+  display: flex;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .croxo--events-list__list__list-item__thumb-wrapper a {
+  align-self: stretch;
+  display: block;
+  flex: 1;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .croxo--events-list__list__list-item__thumb-wrapper a img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title {
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title:hover > * {
+  opacity: 1;
+  transform: translate(0, 0px);
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title:hover .disco_title__text-container > * {
+  background-color: white;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title > * {
+  opacity: 0;
+  transform: translate(0, 20px);
+  transition: all 500ms;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title a {
+  color: var(--acid-color);
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__paragraph {
+  display: block;
+  margin: 0;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container.seemore-hovering .disco_title__excerpt {
+  height: 100%;
+  padding-top: 10px;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container > * {
+  transition: all 500ms;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container > *:last-child {
+  padding-bottom: 8px;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container .disco_title__excerpt {
+  font-family: "Terminal Grotesque";
   font-size: 12px;
+  height: 0%;
+  overflow: hidden;
+  line-height: 12px;
+  padding-top: 0;
+  transition: all 500ms, height 1100ms;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container .disco_title__actions-container__post-link .disco_title__actions-container__post-link__icon {
+  font-size: 14px;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container .disco_title__actions-container__post-link .disco_title__actions-container__post-link__icon:hover {
+  text-decoration: none !important;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container .disco_title__actions-container__post-link .disco_title__actions-container__post-link__span {
+  font-size: 14px;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container .disco_title__actions-container__apply-link .disco_title__actions-container__apply-link__icon {
+  font-size: 14px;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container .disco_title__actions-container__apply-link .disco_title__actions-container__apply-link__icon:hover {
+  text-decoration: none !important;
+}
+.croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item .disco_title .disco_title__text-container .disco_title__actions-container__apply-link .disco_title__actions-container__apply-link__span {
+  font-size: 14px;
 }
 
 .croxo-gallery.croxo-gallery--img-focused .croxo-gallery__gallery-item {
@@ -29805,6 +29974,25 @@ progress {
   height: 100%;
   object-fit: contain;
   width: 100%;
+}
+
+.croxo-calendar-day {
+  border-width: 4px;
+  border-top-width: 2px;
+}
+.croxo-calendar-day .croxo-calendar-day__stripe {
+  border-bottom: 2px solid var(--acid-color);
+}
+.croxo-calendar-day .croxo-calendar-day__stripe * {
+  font-size: 18px;
+}
+.croxo-calendar-day .croxo-calendar-day__text-container .croxo-calendar-day__text-container__numbers * {
+  font-size: 40px;
+  line-height: 45px;
+}
+.croxo-calendar-day .croxo-calendar-day__text-container .croxo-calendar-day__text-container__word * {
+  font-size: 21px;
+  line-height: 20px;
 }
 
 .site-navigation .menu-topnav-container {
