--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,6 +41,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 @import 'lists'; 
 @import './components/croxoGallery.scss'; 
 @import './components/calendarItem.scss'; 
+@import './components/headerDescr.scss'; 
 @import './menus/topNav.scss'; 
 // @import './post_types/customPostType.scss'; 
 // @import './shop/storeFront.scss'; 
