Refactor evnts list *to be continued

--- a/scss/components/headerDescr.scss
+++ b/scss/components/headerDescr.scss
@@ -1,5 +1,13 @@
 .croxo-custom-post-type__header {
   .ctp-header-wrapper {
+    .ctp-header-wrapper__calendar-wrapper__apply-link {
+      .ctp-header-wrapper__calendar-wrapper__apply-link__icon {
+        font-size: 16px;
+      }
+      .ctp-header-wrapper__calendar-wrapper__apply-link__span {
+        font-size: 16px;
+      }
+    }
     .ctp-header-wrapper__text-info-wrapper {
       header {
         h1 {
