--- a/style.css
+++ b/style.css
@@ -29818,14 +29818,11 @@ progress {
 }
 .croxo--events-list--main-wrapper .croxo--events-list__list {
   column-gap: 36px;
-  display: flex;
-  flex-wrap: wrap;
   padding: 0;
   row-gap: 36px;
 }
 .croxo--events-list--main-wrapper .croxo--events-list__list .croxo--events-list__list__list-item {
   border: 2px solid transparent;
-  flex-basis: calc(25% - 27px);
   flex-grow: 0;
   list-style-type: none;
   position: relative;
@@ -29995,6 +29992,12 @@ progress {
   line-height: 20px;
 }
 
+.croxo-custom-post-type__header .ctp-header-wrapper .ctp-header-wrapper__calendar-wrapper__apply-link .ctp-header-wrapper__calendar-wrapper__apply-link__icon {
+  font-size: 16px;
+}
+.croxo-custom-post-type__header .ctp-header-wrapper .ctp-header-wrapper__calendar-wrapper__apply-link .ctp-header-wrapper__calendar-wrapper__apply-link__span {
+  font-size: 16px;
+}
 .croxo-custom-post-type__header .ctp-header-wrapper .ctp-header-wrapper__text-info-wrapper header h1, .croxo-custom-post-type__header .ctp-header-wrapper .ctp-header-wrapper__text-info-wrapper header .h1 {
   line-height: 66px;
 }
