--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,6 +36,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 
 @import './global/variables.scss'; 
 @import './global/globalStyles.scss'; 
+@import './croxoicons/style.scss';
 @import 'header';
 @import 'pages'; 
 @import 'lists'; 
