--- a/style.css
+++ b/style.css
@@ -29356,16 +29356,30 @@ progress {
 
 .theme-color {
   color: var(--acid-color);
-  transition: all 350;
+  transition: all 350ms;
+}
+
+.theme-color--fill {
+  fill: var(--acid-color);
+  transition: all 350ms;
+}
+
+.theme-color--fill--deep {
+  fill: var(--acid-color);
+  transition: all 350ms;
+}
+.theme-color--fill--deep * {
+  fill: var(--acid-color);
+  transition: all 350ms;
 }
 
 .theme-color--deep {
   color: var(--acid-color);
-  transition: all 350;
+  transition: all 350ms;
 }
 .theme-color--deep * {
   color: var(--acid-color);
-  transition: all 350;
+  transition: all 350ms;
 }
 
 .background-theme-color {
@@ -29694,6 +29708,40 @@ progress {
 
 .transition-all-650 {
   transition: all 650ms;
+}
+
+@font-face {
+  font-family: "croxoicons";
+  src: url("fonts/croxoicons.eot");
+  src: url("fonts/croxoicons.eot") format("embedded-opentype"), url("fonts/croxoicons.ttf") format("truetype"), url("fonts/croxoicons.woff") format("woff"), url("fonts/croxoicons.svg?pidhsb#croxoicons") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+.croxo-icons {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "croxoicons" !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.croxo-iconsfavicon:before {
+  content: "\e900";
+}
+
+.croxo-iconstitulo_site_1:before {
+  content: "\e901";
+}
+
+.croxo-iconstitulo_site_2:before {
+  content: "\e902";
 }
 
 .site-header .site-title a {
@@ -30049,6 +30097,35 @@ progress {
 .site-navigation .menu-topnav-container .menu .menu-item a {
   color: var(--acid-color);
   text-decoration: none;
+}
+
+.site-navigation--scroll {
+  background-color: white;
+  border-bottom: 2px solid var(--acid-color);
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  right: 0;
+  transition: all 350ms;
+  top: 0;
+  z-index: 3;
+}
+.site-navigation--scroll * {
+  pointer-events: none;
+}
+.site-navigation--scroll.site-navigation--scroll--show {
+  opacity: 1;
+  pointer-events: all;
+}
+.site-navigation--scroll.site-navigation--scroll--show * {
+  pointer-events: all;
+}
+.site-navigation--scroll .croxo-icons {
+  font-size: 48px;
+}
+.site-navigation--scroll .site-navigation .menu-topnav-container .menu {
+  margin: 0;
 }
 
 @font-face {
