finnish order info start contact form

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,8 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 @import './components/croxoGallery.scss'; 
 @import './components/calendarItem.scss'; 
 @import './components/headerDescr.scss'; 
+@import './components/orderInfo.scss'; 
+@import './forms/contactForm.scss'; 
 @import './menus/topNav.scss'; 
 // @import './post_types/customPostType.scss'; 
 // @import './shop/storeFront.scss'; 
