--- a/scss/global/globalStyles.scss
+++ b/scss/global/globalStyles.scss
@@ -448,9 +448,21 @@
 	}
 }
 
+.tilt-t-1 {
+	margin-top: -1px;
+}
+
+.tilt-t-2 {
+	margin-top: -2px;
+}
+
+.tilt-t-3 {
+	margin-top: -3px;
+}
+
 .tilt-t-lg-6 {
 	@include media-breakpoint-up(lg) {
-		margin-right: -6px;
+		margin-top: -6px;
 	}
 }
 
